--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8" />
     <title>Basketball Game</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script type="text/javascript" src="js/phaser.min.js"></script>
 	<!-- <h2>Basketball Game (inspired by Facebook Messenger!)</h2> -->
     <style type="text/css">
