--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ function create() {
 
 
 	var instructions = document.createElement("span");
-	instructions.innerHTML = "Instructions: Quickly drag the ball to shoot the ball into the hoop!";
+	instructions.innerHTML = "Developed by Khushnu P  Chauhan";
 	document.body.appendChild(instructions);
 }
 
